[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/ClassSelect.gd" type="Script" id=1]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="ClassSelect" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="WarriorButton" type="Button" parent="."]
margin_left = 40.0
margin_top = 50.0
margin_right = 120.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -428, -12 )
custom_fonts/font = SubResource( 2 )
text = "Warrior"

[node name="SelectedClassLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -82.0
margin_top = 105.0
margin_right = 81.0
margin_bottom = 162.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Warrior"
align = 1

[node name="MageButton" type="Button" parent="."]
margin_left = 350.0
margin_top = 50.0
margin_right = 430.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( -428, -12 )
custom_fonts/font = SubResource( 2 )
text = "Wizard"

[node name="Select" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_top = 180.0
margin_right = 40.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( -428, -12 )
custom_fonts/font = SubResource( 2 )
text = "Select"

[connection signal="pressed" from="WarriorButton" to="." method="_on_WarriorButton_pressed"]
[connection signal="pressed" from="MageButton" to="." method="_on_MageButton_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_Select_pressed"]
